syntax = "proto3";

package cura.plugins.v0;

import "cura/plugins/v0/polygons.proto";

message TravelPath {
  repeated Point2D points = 1;
}

message ExtrusionJunction {
  Point2D point = 1;
  uint32 width = 2;
}

message LineJunctions {
  repeated ExtrusionJunction junctions = 1;
}

message Toolpaths {
  repeated LineJunctions tool_paths = 1;
}
