syntax = "proto3";

package cura.plugins.v1;

enum SlotID {
  SIMPLIFY = 0;
  POSTPROCESS = 1;
}